# CHIP-8

./: CMakeLists.txt  Chip8.cpp  Chip8.h  MyGui.cpp  MyGui.h  Platform.cpp  Platform.h  README.md  content.txt  emulator.cpp  seperateWindow.txt
